force-app/main/default/objects/Company_Objective__c/fields/Hit_Objective_Target__c.field-meta.xml
<CustomField>
    <fullName>Hit_Objective_Target__c</fullName>
    <description>Did you hit your objective target?</description>
    <label>Hit Objective Target?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>