force-app/main/default/objects/Company_Objective__c/fields/X3_month__c.field-meta.xml
<CustomField>
    <fullName>X3_month__c</fullName>
    <description>For each metric, do you want to add, change, reassign, or eliminate anything for the next quarter?</description>
    <inlineHelpText>For each metric, do you want to add, change, reassign, or eliminate anything for the next quarter?</inlineHelpText>
    <label>3-month Changes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>