force-app/main/default/objects/Company_Objective__c/fields/X6_month_Changes__c.field-meta.xml
<CustomField>
    <fullName>X6_month_Changes__c</fullName>
    <description>For the objective or each metric, is there additional work that should be included in the objectives for the next Planning Period?</description>
    <inlineHelpText>For the objective or each metric, is there additional work that should be included in the objectives for the next Planning Period?</inlineHelpText>
    <label>6-month Changes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>